# multi-agent-observability-with-TTS

./: .env.sample  .gitignore  AGENT_NAMING_SYSTEM_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  EDUCATIONAL_DASHBOARD_IMPLEMENTATION_TRACKING.md  EDUCATIONAL_DASHBOARD_MODE_SUMMARY.md  EDUCATIONAL_DASHBOARD_STATUS.md  ENHANCED_HOOK_COVERAGE_IMPLEMENTATION.md  ENHANCED_HOOK_MODAL_DESIGN.md  ENHANCED_HOOK_MODAL_IMPLEMENTATION_COMPLETE.md  ENHANCED_HOOK_MODAL_IMPLEMENTATION_SUMMARY.md  FALLBACK_METRICS_IMPLEMENTATION.md  HOOK_COVERAGE_MODAL_FIX.md  PROJECT_STATUS.md  README-test-data.md  README.md  SESSION_RELATIONSHIP_VISUALIZATION_IMPLEMENTATION.md  STAGE_2_COMPLETION_SUMMARY.md  TERMINAL_CLI_IMPLEMENTATION.md  WEBSOCKET_DEBUG_FIX_SUMMARY.md  apply_assessment_patch.sh  create-comprehensive-test-data.js  debug_export_20250801_075545.md  handoff_20250801_075545.md  handoff_salesai_20250801.md  package-lock.json  package.json  patch_assessment.js  patch_educational_dashboard.py  populate-agent-metrics.js  relationship-api-demo.html  send-test-agent-events.js  simple-agent-test.js  simple_patch.py  test-agent-naming-integration.js  test-api.html  test-hook-coverage.js  test-regression-setup.sh  test-session-id-integration.py  (+6 more)
.claude/hooks/: notification.py  pre_compact.py  pyproject.toml  send_event.py  session_context_loader.py  session_event_tracker.py  session_resume_detector.py  session_start.py  session_startup_notifier.py  subagent_stop.py  test_overlap_prevention.py  test_post_tool_use.py  test_pre_tool_use.py  test_queue_coordination.py  test_session_start.py  (+3 more)
(+377 files in other folders)
